# dapla-hurtigstart-jupyter-extension

./: .cruft.json  .gitignore  .prettierignore  LICENSE  MANIFEST.in  README.md  RELEASE.md  SECURITY.md  environment.yml  install.json  package-lock.json  package.json  pyproject.toml
.github/workflows/: build.yml  check-release.yml
binder/: environment.yml  postBuild
src/: arguments-widget.tsx  index.ts
src/__tests__/: dapla_hurtigstart.spec.ts
ui-tests/: package.json
ui-tests/tests/: dapla_hurtigstart.spec.ts
